--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -128,7 +128,7 @@ input:focus,
     margin-right: auto;
 }
 
-.logo img {
+.site-header .logo img {
     height: 75px;
     width: auto;
 }
@@ -1082,7 +1082,7 @@ input:focus, textarea:focus, select:focus {
     }
 
     /* Header logo sizing (tablet) */
-    .logo img {
+    .site-header .logo img {
         height: 64px;
     }
 
@@ -1168,7 +1168,7 @@ input:focus, textarea:focus, select:focus {
     }
 
     /* Header logo sizing (mobile) */
-    .logo img {
+    .site-header .logo img {
         height: 56px;
     }
 
