--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -272,7 +272,7 @@ input:focus,
 .hero-phone {
     position: absolute;
     right: 24px;
-    bottom: -180px;
+    bottom: 0;
     width: 380px;
     height: auto;
     z-index: 10;
@@ -296,7 +296,7 @@ input:focus,
 /* ===== Solo Shift Section ===== */
 .solo-shift {
     background-color: var(--color-white);
-    padding: 220px 0 80px 0;
+    padding: 100px 0 80px 0;
 }
 
 .solo-shift-container {
@@ -1127,7 +1127,7 @@ input:focus, textarea:focus, select:focus {
 
     .hero-phone {
         width: 280px;
-        bottom: -120px;
+        bottom: 0;
     }
 
     .solo-shift-container {
@@ -1231,7 +1231,7 @@ input:focus, textarea:focus, select:focus {
 
     .hero-phone {
         width: 200px;
-        bottom: -80px;
+        bottom: 0;
         right: 16px;
     }
 
