style(v2): add 30px space below 'How we do it' button in solo-shift section

--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -412,6 +412,7 @@ input:focus,
 /* Right-column button aligns to the right on desktop */
 .solo-shift-right .btn-purple {
     align-self: flex-end;
+    margin-bottom: 30px;
 }
 
 .btn-purple:hover {
